--- a/src/app/sistema/notificacoes/nova-msg/nova-msg.component.html
+++ b/src/app/sistema/notificacoes/nova-msg/nova-msg.component.html
@@ -17,9 +17,9 @@
                             <select *ngIf="paraTodos" class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm" aria-label="Default select example" disabled>
                 <option selected>Será enviado para todos</option>
               </select>
-              <select *ngIf="!paraTodos" class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm">
-                <option selected disabled>Selecione um Usuario</option>
-                <option *ngFor="let usuario of usuarios" [value]="usuario.name">
+              <select *ngIf="!paraTodos" class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm" formControlName="usuario">
+                <option selected disabled>Selecione um Usuario</option>1
+                <option *ngFor="let usuario of usuarios" [value]="usuario.id">
                   {{ usuario.name }}
                 </option>
               </select>
