fluxo de caixa funcionando

--- a/src/app/sistema/financeiro/contas-a-pagar/contas-a-pagar.component.html
+++ b/src/app/sistema/financeiro/contas-a-pagar/contas-a-pagar.component.html
@@ -76,7 +76,7 @@
         <td>{{ contas?.fornecedor }}</td>
         <td>{{ contas?.formaPagamento }}</td>
         <td>{{ contas?.data }}</td>
-        <td>{{ contas?.valortotal | currency: "BRL" }}</td>
+        <td>{{ contas?.valorTotal | currency: "BRL" }}</td>
         <td>{{ contas?.situacao }}</td>
         <td>{{ contas?.unidade }}</td>
         <td>
