--- a/src/app/sistema/config/permissoes/visualizar-categoria/visualizar-categoria.component.html
+++ b/src/app/sistema/config/permissoes/visualizar-categoria/visualizar-categoria.component.html
@@ -1,10 +1,10 @@
 <!-- Modal -->
-<div class="modal fade" #opt id="editPermission" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" #opt id="viewPermission" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content  bg-custom-light">
             <div class="modal-header">
-                <h5 class="modal-title text-custom-dark" id="editPermissionLabel">Editar permissão</h5>
+                <h5 class="modal-title text-custom-dark" id="viewPermissionLabel">Editar permissão</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <!-- Títulos da Tabela -->
