--- a/src/app/sistema/config/permissoes/criar-permissoes/criar-permissoes.component.html
+++ b/src/app/sistema/config/permissoes/criar-permissoes/criar-permissoes.component.html
@@ -1,15 +1,41 @@
 <!-- Modal -->
 <div class="modal fade" #opt id="addPermission" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content  bg-custom-light">
             <div class="modal-header">
                 <h5 class="modal-title text-custom-dark" id="addFilialLabel">Adicionar permissão</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="w-100 d-flex justify-content-center">
-                <div class="my-4 px-4 pt-0 p-0 m-0 form-floating">
-                    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Filial" />
+            <!-- Títulos da Tabela -->
+            <div class="row m-0 my-5 text-custom-dark justify-content-center">
+                <div class="col-3 text-center">
+                    <h5 class="fw-bold">Área</h5>  
+                </div>
+                <div class="col-3 text-center">
+                    <h5 class="fw-bold">Editar</h5>
+                </div>
+                <div class="col-3 text-center">
+                    <h5 class="fw-bold">Excluir</h5>
+                </div>
+                <div class="col-3 text-center">
+                    <h5 class="fw-bold">Visualizar</h5>
+                </div>
+            </div>
+
+            <!-- Tabela -->
+            <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let item of areas">
+                <div class="col-3 text-center">
+                    <p>{{item.name}}</p>
+                </div>
+                <div class="col-3 text-center">
+                    <input type="checkbox" class="checkbox-permission">
+                </div>
+                <div class="col-3 text-center">
+                    <input type="checkbox" class="checkbox-permission">
+                </div>
+                <div class="col-3 text-center">
+                    <input type="checkbox" class="checkbox-permission">
                 </div>
             </div>
             <div class="modal-footer">
