ajustes nos modals do financeiro

--- a/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
+++ b/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
@@ -202,7 +202,7 @@
 
                                 <!-- WhatsApp -->
                                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-                                    <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="WhatsApp" formControlName="whatsApp" mask="(00) 00000-0000">
+                                    <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="WhatsApp" mask="(00) 00000-0000">
                                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">WhatsApp</label>
                                 </div>
 
