--- a/src/app/sistema/financeiro/contas-a-pagar/edit-contas-p/edit-contas-p.component.html
+++ b/src/app/sistema/financeiro/contas-a-pagar/edit-contas-p/edit-contas-p.component.html
@@ -1,11 +1,11 @@
 <!-- Modal -->
-<div class="modal fade" id="editarRecebimentos" tabindex="-1" aria-labelledby="adicionarPagamentosLabel" aria-hidden="true">
+<div class="modal fade" id="editarPagamentos" tabindex="-1" aria-labelledby="adicionarPagamentosLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <form [formGroup]="editPagamentoForm">
             <!-- Modal content -->
             <div class="modal-content rounded-15 bg-custom-light">
                 <div class="modal-header px-4">
-                    <h5 class="modal-title text-custom-dark" id="adicionarPagamentosLabel">Adicionar pagamento</h5>
+                    <h5 class="modal-title text-custom-dark" id="adicionarPagamentosLabel">Editar Pagamento</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body px-4">
