--- a/src/app/sistema/financeiro/contas-a-receber/edit-recebimento/edit-recebimento.component.html
+++ b/src/app/sistema/financeiro/contas-a-receber/edit-recebimento/edit-recebimento.component.html
@@ -4,13 +4,13 @@
 </button> -->
 
 <!-- Modal -->
-<div class="modal fade" id="adicionarRecebimento" tabindex="-1" aria-labelledby="adicionarRecebimentoLabel" aria-hidden="true">
+<div class="modal fade" id="editRecebimento" tabindex="-1" aria-labelledby="adicionarRecebimentoLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <form [formGroup]="editRecebimentoForm">
             <!-- Modal content -->
             <div class="modal-content rounded-15 bg-custom-light">
                 <div class="modal-header px-4">
-                    <h5 class="modal-title text-custom-dark" id="adicionarRecebimentoLabel">Adicionar Recebimento</h5>
+                    <h5 class="modal-title text-custom-dark" id="adicionarRecebimentoLabel">Editar Recebimento</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body px-4">
