--- a/src/app/sistema/financeiro/contas-a-receber/contas-a-receber.component.html
+++ b/src/app/sistema/financeiro/contas-a-receber/contas-a-receber.component.html
@@ -40,7 +40,7 @@
 
   <!-- Pesquisar -->
   <div class="col-2 px-2 pt-4 m-0 position-relative">
-    <input
+    <input [(ngModel)]="search" (input)="pesquisarConta()"
       class="form-control form-control border-0 h-limited-sm py-2 ps-4 pe-5 rounded-15 shadow-sm"
       type="text"
       placeholder="Pesquisar"
@@ -87,21 +87,21 @@
           <i
             class="fs-5 bi-eye-fill icon-view p-3"
             cursor="pointer"
-            (click)="loadViewRecebimento(recebimento)"
+            (click)="loadViewRecebimento(recebimentos)"
             data-bs-toggle="modal"
             data-bs-target="#viewRecebimento"
           ></i>
           <i
             class="fs-5 bi-pen-fill icon-edit p-3"
             cursor="pointer"
-            (click)="loadRecebimento(recebimento)"
+            (click)="loadRecebimento(recebimentos)"
             data-bs-toggle="modal"
-            data-bs-target="#editRecebimentos"
+            data-bs-target="#editRecebimento"
           ></i>
           <i
             class="fs-5 bi-trash-fill icon-delete p-3"
             cursor="pointer"
-            (click)="delete(recebimento)"
+            (click)="delete(recebimentos)"
           ></i>
         </td>
       </tr>
