--- a/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
+++ b/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
@@ -81,11 +81,11 @@
                             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Inscrição estadual</label>
                         </div>
 
-                        <!-- Insento -->
+                        <!-- Isento -->
                         <div class="col-2 px-2 pt-4 p-0 m-0 form-floating d-flex align-items-center">
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="checkbox" value="insento" id="insento" formControlName="is_exempt">
-                                <label class="form-check-label" for="insento">Insento</label>
+                                <label class="form-check-label" for="insento">Isento</label>
                             </div>
                         </div>
 
@@ -93,6 +93,12 @@
                         <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
                             <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Inscrição municipal" formControlName="municipal_registration">
                             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Inscrição municipal</label>
+                        </div>
+
+                        <!-- Faturamento Minimo -->
+                        <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+                            <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="R$" formControlName="minimum_billing">
+                            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Faturamento mínimo</label>
                         </div>
                     </div>
 
