--- a/src/app/sistema/financeiro/contas-a-receber/filtro-recebimentos/filtro-recebimentos.component.html
+++ b/src/app/sistema/financeiro/contas-a-receber/filtro-recebimentos/filtro-recebimentos.component.html
@@ -1,1 +1,121 @@
-<p>filtro-recebimentos works!</p>
+<!-- Modal -->
+<div class="modal fade" id="filtrarRecebimentos" tabindex="-1" aria-labelledby="filtrarRecebimentosLabel" aria-hidden="true" aria-label="Close">
+    <div class="modal-dialog modal-xl">
+        <!-- Modal content -->
+        <div class="modal-content rounded-15 bg-custom-light">
+            <div class="modal-header px-4">
+                <h5 class="modal-title text-custom-dark" id="filtrarRecebimentosLabel">
+                    Filtrar Pagamentos
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body px-4">
+                <div class="row">
+                    <div class="col px-2 pt-4 p-0 m-0 form-floating">
+                        <input (keyup)="filtrarTipo($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pagamento" />
+                        <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tipo de pagamento</label
+        >
+
+        <i
+          class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"
+        ></i>
+      </div>
+      <div class="col px-2 pt-4 p-0 m-0 form-floating">
+        <input
+          (keyup)="filtrarUnidade($event)"
+          class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm"
+          type="text"
+          placeholder="Loja"
+        />
+        <label class="ms-2 mt-3 small text-truncate text-custom-dark"
+          >Loja</label
+        >
+
+        <i
+          class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"
+        ></i>
+      </div>
+    </div>
+
+    <!-- Lista de colaboradores -->
+    <!-- Títulos da Tabela -->
+    <div class="row m-0 my-5 text-custom-dark justify-content-center">
+      <div class="col-2">
+        <h5 class="fw-bold text-truncate">Cód</h5>
+      </div>
+      <div class="col-2">
+        <h5 class="fw-bold text-truncate">Descrição</h5>
+      </div>
+      <div class="col-2">
+        <h5 class="fw-bold text-truncate">Forma Pagamento</h5>
+      </div>
+      <div class="col-2">
+        <h5 class="fw-bold text-truncate">Unidade</h5>
+      </div>
+      <div class="col-2">
+        <h5 class="fw-bold text-truncate">Total</h5>
+      </div>
+      <div class="col-2">
+        <h5 class="fw-bold text-truncate d-none">Ações</h5>
+      </div>
+    </div>
+    <!-- Tabela -->
+    <div
+      class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center"
+      *ngFor="let recebimento of recebimentos"
+    >
+      <div class="col-2">
+        <p>{{ recebimento?.id }}</p>
+      </div>
+      <div class="col-2">
+        <p>{{ recebimento?.descricao }}</p>
+      </div>
+      <div class="col-2">
+        <p>{{ recebimento?.formaPagamento }}</p>
+      </div>
+      <div class="col-2">
+        <p>{{ recebimento?.unidade }}</p>
+      </div>
+      <div class="col-2">
+        <p>{{ recebimento?.valorTotal }}</p>
+      </div>
+      <div class="col-2 text-end">
+
+        <i
+          class="fs-5 bi-pen-fill icon-edit p-3"
+          routerLink="/sistema/pagamento/editar/{{ recebimento.id }}"
+          cursor="pointer"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></i>
+        <i
+          class="fs-5 bi-trash-fill icon-delete p-3"
+          cursor="pointer"
+          (click)="deleteRecebimento(recebimento.id)"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></i>
+      </div>
+    </div>
+    <!-- Dados cadastrais -->
+  </div>
+  <!-- Modal footer -->
+  <div class="row m-0 py-3 modal-footer">
+    <!-- Cancelar -->
+    <div class="col-3 px-2 p-0 m-0 d-grid">
+      <button
+        data-bs-dismiss="modal"
+        type="reset"
+        class="h-limited-sm btn rounded-15 py-1 px-4 bg-light shadow-sm text-start"
+      >
+        <h5 class="fw-normal my-auto text-truncate text-custom-dark">
+          Cancelar
+        </h5>
+      </button>
+    </div>
+  </div>
+  <!-- /Modal footer -->
+</div>
+<!-- /Modal content -->
+</div>
+</div>
