--- a/src/app/sistema/config/permissoes/editar-permissoes/editar-permissoes.component.html
+++ b/src/app/sistema/config/permissoes/editar-permissoes/editar-permissoes.component.html
@@ -7,6 +7,18 @@
                 <h5 class="modal-title text-custom-dark" id="editPermissionLabel">Editar permissão</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <div class="w-100 row justify-content-center">
+                <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+                    <input
+                      class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"
+                      type="text"
+                      placeholder="Nome"
+                    />
+                    <label class="ms-2 mt-3 small text-truncate text-custom-dark"
+                      >Nome</label
+                    >
+                  </div>
+            </div>
             <!-- Títulos da Tabela -->
             <div class="row m-0 my-5 text-custom-dark justify-content-center">
                 <div class="col-3 text-center">
