--- a/src/app/sistema/config/permissoes/criar-permissoes/criar-permissoes.component.html
+++ b/src/app/sistema/config/permissoes/criar-permissoes/criar-permissoes.component.html
@@ -2,7 +2,7 @@
 <div class="modal fade" #opt id="addPermission" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
-        <div class="modal-content  bg-custom-light">
+        <form class="modal-content  bg-custom-light" (ngSubmit)="submitForm()">
             <div class="modal-header">
                 <h5 class="modal-title text-custom-dark" id="addFilialLabel">Adicionar permissão</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -51,10 +51,9 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button"
-                    class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-center align-items-center shadow-sm"
-                    data-bs-dismiss="modal" aria-label="Close" data-bs-toggle="modal">Salvar</button>
+                <button type="submit"
+                    class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-center align-items-center shadow-sm">Salvar</button>
             </div>
-        </div>
+        </form>
     </div>
 </div>
