--- a/src/app/sistema/config/permissoes/permissoes/permissoes.component.html
+++ b/src/app/sistema/config/permissoes/permissoes/permissoes.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<app-criar-permissoes></app-criar-permissoes>
+<app-criar-permissoes (eventEmitter)="permissions=$event"></app-criar-permissoes>
 <app-editar-permissoes></app-editar-permissoes>
 <app-visualizar-categoria></app-visualizar-categoria>
 <div class="row p-0 m-0">
@@ -63,7 +63,7 @@
                 <div class="col-2 text-end">
                     <i class="fs-5 bi-eye-fill icon-view px-2 py-1" data-bs-toggle="modal" data-bs-target="#viewPermission" cursor="pointer"></i>
                     <i class="fs-5 bi-pen-fill icon-edit p-3" data-bs-toggle="modal" data-bs-target="#editPermission" cursor="pointer"></i>
-                    <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer" (click)="deleteUser(item.id)"></i>
+                    <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer" (click)="delete(item.id)"></i>
                 </div>
             </div>
 
