--- a/src/app/sistema/config/permissoes/editar-permissoes/editar-permissoes.component.html
+++ b/src/app/sistema/config/permissoes/editar-permissoes/editar-permissoes.component.html
@@ -2,7 +2,7 @@
 <div class="modal fade" #opt id="editPermission" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
-        <div class="modal-content  bg-custom-light">
+        <form [formGroup]="permissionForm" (ngSubmit)="submitForm(permissionForm)" class="modal-content  bg-custom-light">
             <div class="modal-header">
                 <h5 class="modal-title text-custom-dark" id="editPermissionLabel">Editar permissão</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -13,6 +13,7 @@
                       class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"
                       type="text"
                       placeholder="Nome"
+                      formControlName="name"
                     />
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                       >Nome</label
@@ -41,20 +42,22 @@
                     <p>{{item.name}}</p>
                 </div>
                 <div class="col-3 text-center">
-                    <input type="checkbox" class="checkbox-permission">
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="permissionCheck(permission.permission, item.edit)" checked (click)="addPermission(item.edit, $event)">
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="!(permissionCheck(permission.permission, item.edit))" (click)="addPermission(item.edit, $event)">
                 </div>
                 <div class="col-3 text-center">
-                    <input type="checkbox" class="checkbox-permission">
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="permissionCheck(permission.permission, item.delete)" checked (click)="addPermission(item.edit, $event)">
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="!(permissionCheck(permission.permission, item.delete))" (click)="addPermission(item.edit, $event)">
                 </div>
                 <div class="col-3 text-center">
-                    <input type="checkbox" class="checkbox-permission">
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="permissionCheck(permission.permission, item.view)" checked (click)="addPermission(item.view, $event)">
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="!(permissionCheck(permission.permission, item.view))" (click)="addPermission(item.edit, $event)">
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button"
-                    class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-center align-items-center shadow-sm"
-                    data-bs-dismiss="modal" aria-label="Close" data-bs-toggle="modal">Salvar</button>
+                <button type="submit"
+                    class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-center align-items-center shadow-sm">Salvar</button>
             </div>
-        </div>
+        </form>
     </div>
 </div>
