--- a/src/app/sistema/config/permissoes/visualizar-categoria/visualizar-categoria.component.html
+++ b/src/app/sistema/config/permissoes/visualizar-categoria/visualizar-categoria.component.html
@@ -7,6 +7,22 @@
                 <h5 class="modal-title text-custom-dark" id="viewPermissionLabel">Editar permissão</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+
+            <div class="w-100 row justify-content-center">
+                <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+                    <input
+                      class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"
+                      type="text"
+                      placeholder="Nome"
+                      readonly
+                      value="teste"
+                    />
+                    <label class="ms-2 mt-3 small text-truncate text-custom-dark"
+                      >Nome</label
+                    >
+                  </div>
+            </div>
+
             <!-- Títulos da Tabela -->
             <div class="row m-0 my-5 text-custom-dark justify-content-center">
                 <div class="col-3 text-center">
@@ -29,19 +45,17 @@
                     <p>{{item.name}}</p>
                 </div>
                 <div class="col-3 text-center">
-                    <input type="checkbox" class="checkbox-permission">
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="permissionCheck(permission.permission, item.edit)" checked disabled>
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="!(permissionCheck(permission.permission, item.edit))" disabled>
                 </div>
                 <div class="col-3 text-center">
-                    <input type="checkbox" class="checkbox-permission">
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="permissionCheck(permission.permission, item.delete)" checked disabled>
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="!(permissionCheck(permission.permission, item.delete))" disabled> 
                 </div>
                 <div class="col-3 text-center">
-                    <input type="checkbox" class="checkbox-permission">
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="permissionCheck(permission.permission, item.view)" checked disabled> 
+                    <input type="checkbox" id="checkbox" class="checkbox-permission" *ngIf="!(permissionCheck(permission.permission, item.view))" disabled>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button"
-                    class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-center align-items-center shadow-sm"
-                    data-bs-dismiss="modal" aria-label="Close" data-bs-toggle="modal">Salvar</button>
             </div>
         </div>
     </div>
