botão para exportar CSV

--- a/src/app/sistema/financeiro/contas-a-receber/contas-a-receber.component.html
+++ b/src/app/sistema/financeiro/contas-a-receber/contas-a-receber.component.html
@@ -114,6 +114,7 @@
   <!-- Botão Exportar CSV -->
   <div class="col-3 px-2 p-0 m-0 d-grid">
     <button
+    (click)="exportexcel()"
       type="button"
       class="h-limited btn rounded-15 py-1 px-4 btn-outline-secondary d-flex justify-content-between shadow-sm"
     >
