--- a/src/app/sistema/financeiro/fluxo-de-caixa/fluxo-de-caixa.component.html
+++ b/src/app/sistema/financeiro/fluxo-de-caixa/fluxo-de-caixa.component.html
@@ -68,7 +68,7 @@
 <div class="row m-0 py-3 justify-content-between">
     <!-- Botão Exportar CSV -->
     <div class="col-3 px-2 p-0 m-0 d-grid">
-        <button type="button" class="h-limited btn rounded-15 py-1 px-4 btn-outline-secondary d-flex justify-content-between shadow-sm">
+        <button (click)="exportexcel()" type="button" class="h-limited btn rounded-15 py-1 px-4 btn-outline-secondary d-flex justify-content-between shadow-sm">
       <h5 class="fw-normal my-auto text-truncate">Exportar CSV</h5>
       <i class="bi-file-earmark-spreadsheet my-auto fs-4 p-0 m-0 fw-bold"></i>
     </button>
