--- a/src/app/sistema/financeiro/financeiro.component.html
+++ b/src/app/sistema/financeiro/financeiro.component.html
@@ -27,6 +27,9 @@
                         <li class="nav-item px-1">
                             <a class="nav-link px-4" [class.active]="activeSection == 'fluxo'" (click)="toggleActiveSection('fluxo')">Fluxo de caixa</a>
                         </li>
+                        <li class="nav-item px-1">
+                            <a class="nav-link px-4" [class.active]="activeSection == 'aceite'" (click)="toggleActiveSection('aceite')">Compras</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -43,6 +46,9 @@
 
             <div *ngIf="activeSection == 'fluxo'">
                 <app-fluxo-de-caixa></app-fluxo-de-caixa>
+            </div>
+            <div *ngIf="activeSection == 'aceite'">
+                <app-aceite-em-espera></app-aceite-em-espera>
             </div>
 
         </div>
